# idempotency

./: .bazeliskrc  .gitignore  .pre-commit-config.yaml  BUILD  BUILD.bazel  LICENSE  README.md  WORKSPACE  WORKSPACE.bazel  bazel  bazelrc.tmpl  deploy.example  deployment.properties  eclipse-formatter.xml  execute  maven-deps_install.json
.github/workflows/: main.yml
bazelisk/: package.json
deploy/: deploy.example
lombok/: BUILD.bazel
resources/: BUILD.bazel  log4j.properties
resources/db/: BUILD.bazel  flyway.conf  jooq_config.xml
resources/db/jars/: BUILD.bazel
resources/db/sql/: V0001__create_transactions_table.sql  V0002__create_idempotency_records_table.sql  V0003__add_created_at_idempotency_records.sql  V0004__create_created_at_index_idempotency_records.sql  V0005__add_updated_at_idempotency_store.sql
scripts/: BUILD.bazel  migrate_db.sh
src/main/java/com/bablooka/idempotency/: BUILD  Idempotency.java  Main.java
src/main/java/com/bablooka/idempotency/application/: BUILD.bazel  ExampleIdempotencyStore.java  FakePaymentProcessor.java  IdempotencyConnectionProvider.java  IdempotencyExample.java  IdempotencyExampleConfig.java  IdempotencyExampleException.java  IdempotencyExampleModule.java  IdempotencyExampleRoot.java  SqliteStore.java  TransactionsStore.java
src/main/java/com/bablooka/idempotency/core/: BUILD  BUILD.bazel  CoreModule.java  CoreRoot.java  Idempotency.java  IdempotencyException.java  IdempotencyHandler.java  IdempotencyStore.java  IdempotencyStoreConnection.java  IdempotencyTransactionProvider.java  IdempotentRpc.java  IdempotentRpcContextFactory.java  IdemptencyStoreConnection.java  Util.java
src/main/java/com/bablooka/idempotency/db/: BUILD
src/main/java/com/bablooka/idempotency/proto/: BUILD.bazel  idempotency_record.proto
src/test/java/com/bablooka/idempotency/: BUILD  IdempotencyTest.java
src/test/java/com/bablooka/idempotency/core/: BUILD  BUILD.bazel  CoreTestRoot.java  CoreTestSuite.java  IdempotencyHandlerTest.java  IdempotencyTest.java  UtilTest.java
