load("@rules_java//java:defs.bzl", "java_library")
load("@graknlabs_bazel_distribution//maven/templates:rules.bzl", "deploy_maven", "assemble_maven")
load("@dagger//:workspace_defs.bzl", "dagger_rules")
dagger_rules()

java_plugin(
    name = "lombok_plugin",
    generates_api = True,
    processor_class = "lombok.launch.AnnotationProcessorHider$AnnotationProcessor",
    deps = ["@maven-lombok"],
)

java_library(
    name = "lombok",
    exported_plugins = [":lombok_plugin"],
    visibility = ["//visibility:public"],
    exports = ["@maven-lombok"],
)

java_library(
    name = "mockito",
    runtime_deps = ["@maven-mockito"],
    exports = ["@maven-mockito"],
    testonly = 1,
    visibility = ["//visibility:public"],
)

java_library(
    name = "mockito-inline",
    runtime_deps = ["@maven-mockito-inline"],
    exports = ["@maven-mockito-inline"],
    testonly = 1,
    visibility = ["//visibility:public"],
)

java_library(
    name = "bytebuddy",
    runtime_deps = ["@maven-bytebuddy"],
    exports = ["@maven-bytebuddy"],
    testonly = 1,
    visibility = ["//visibility:public"],
)

java_library(
    name = "bytebuddy-agent",
    runtime_deps = ["@maven-bytebuddy-agent"],
    exports = ["@maven-bytebuddy-agent"],
    testonly = 1,
    visibility = ["//visibility:public"],
)

java_library(
    name = "guava",
    runtime_deps = ["@maven-guava"],
    exports = ["@maven-guava"],
    visibility = ["//visibility:public"],
)

java_library(
    name = "idempotency-core",
    srcs = ["//src/main/java/com/bablooka/idempotency/core:sources"],
    deps = [
        ":dagger",
        ":lombok",
        "@log4j-api",
        "//src/main/java/com/bablooka/idempotency/proto:idempotency_record_java_proto"
    ],
    tags = ["maven_coordinates=com.bablooka:idempotency-core:{pom_version}", "manual"],
    visibility = ["//:__subpackages__"],
)

assemble_maven(
    name = "assemble-maven",
    target = "//:idempotency-core",
    package = "{maven_packages}",
    project_name = "Idempotency Core",
    project_description = "Idempotecy - Java library for idempotency",
    project_url = "https://github.com/weksler/idempotecy",
    scm_url = "https://github.com/weksler/idempotency.git",
    version_file = "//deploy:VERSION",
    developers = {"1": ["name=Michael Weksler", "email=m...@b...m", "organization=Bablooka"]},
    license = "mit"
)

deploy_maven(
    name = "deploy-maven",
    target = ":assemble-maven",
    deployment_properties = "//deploy:deployment.properties"
)
