load("@rules_java//java:defs.bzl", "java_library")
load("@graknlabs_bazel_distribution//maven/templates:rules.bzl", "assemble_maven", "deploy_maven")
load("@dagger//:workspace_defs.bzl", "dagger_rules")

dagger_rules()

java_plugin(
    name = "lombok_plugin",
    generates_api = True,
    processor_class = "lombok.launch.AnnotationProcessorHider$AnnotationProcessor",
    deps = ["@maven-deps//:org_projectlombok_lombok"],
)

java_library(
    name = "lombok",
    exported_plugins = [":lombok_plugin"],
    visibility = ["//visibility:public"],
    exports = ["@maven-deps//:org_projectlombok_lombok"],
)

java_library(
    name = "idempotency-core",
    srcs = ["//src/main/java/com/bablooka/idempotency/core:sources"],
    tags = [
        "manual",
        "maven_coordinates=com.bablooka:idempotency-core:{pom_version}",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//:dagger",
        "//:lombok",
        "//src/main/java/com/bablooka/idempotency/proto:idempotency_record_java_proto",
        "//src/main/java/com/bablooka/idempotency/proto:idempotency_record_proto",
        "@com_google_protobuf//:protobuf_java",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf_protobuf_java",
        "@maven-deps//:com_google_guava_guava",
        "@maven-deps//:com_google_protobuf_protobuf_java_util",
        "@maven-deps//:org_apache_logging_log4j_log4j_api",
        "@maven-deps//:org_jooq_jooq",
    ],
)

assemble_maven(
    name = "assemble-maven",
    developers = {"1": [
        "name=Michael Weksler",
        "email=m...@b...m",
        "organization=Bablooka",
    ]},
    license = "mit",
    package = "{maven_packages}",
    project_description = "Idempotecy - Java library for idempotency",
    project_name = "Idempotency Core",
    project_url = "https://github.com/weksler/idempotecy",
    scm_url = "https://github.com/weksler/idempotency.git",
    target = "//:idempotency-core",
    version_file = "//deploy:VERSION",
)

deploy_maven(
    name = "deploy-maven",
    deployment_properties = "//deploy:deployment.properties",
    target = ":assemble-maven",
)
