workspace(name = "idempotency")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_java",
    sha256 = "34b41ec683e67253043ab1a3d1e8b7c61e4e8edefbcad485381328c934d072fe",
    url = "https://github.com/bazelbuild/rules_java/releases/download/4.0.0/rules_java-4.0.0.tar.gz",
)

load("@bazel_tools//tools/build_defs/repo:jvm.bzl", "jvm_maven_import_external")

RULES_JVM_EXTERNAL_TAG = "4.2"

RULES_JVM_EXTERNAL_SHA = "cd1a77b7b02e8e008439ca76fd34f5b07aecb8c752961f9640dea15e9e5ba1ca"

http_archive(
    name = "rules_jvm_external",
    sha256 = RULES_JVM_EXTERNAL_SHA,
    strip_prefix = "rules_jvm_external-%s" % RULES_JVM_EXTERNAL_TAG,
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip" % RULES_JVM_EXTERNAL_TAG,
)

load("@rules_jvm_external//:defs.bzl", "maven_install")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "graknlabs_bazel_distribution",
    commit = "e181add439dc1cfb7b1c27db771ec741d5dd43e6",
    remote = "https://github.com/graknlabs/bazel-distribution",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_skylib",
    sha256 = "c6966ec828da198c5d9adbaa94c05e3a1c7f21bd012a0b29ba8ddbccb2c93b0d",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.1.1/bazel-skylib-1.1.1.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.1.1/bazel-skylib-1.1.1.tar.gz",
    ],
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

load("@rules_java//java:repositories.bzl", "rules_java_dependencies", "rules_java_toolchains")

rules_java_dependencies()

rules_java_toolchains()

# rules_proto defines abstract rules for building Protocol Buffers.
http_archive(
    name = "rules_proto",
    sha256 = "66bfdf8782796239d3875d37e7de19b1d94301e8972b3cbd2446b332429b4df1",
    strip_prefix = "rules_proto-4.0.0",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_proto/archive/refs/tags/4.0.0.tar.gz",
        "https://github.com/bazelbuild/rules_proto/archive/refs/tags/4.0.0.tar.gz",
    ],
)

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies", "rules_proto_toolchains")

rules_proto_dependencies()

rules_proto_toolchains()

DAGGER_TAG = "2.40.5"

DAGGER_SHA = "5a6923e56edbc1e34c8089ecab5338a1b8ddb79a3a54b6c86cdcf31212680d32"

http_archive(
    name = "dagger",
    sha256 = DAGGER_SHA,
    strip_prefix = "dagger-dagger-%s" % DAGGER_TAG,
    urls = ["https://github.com/google/dagger/archive/dagger-%s.zip" % DAGGER_TAG],
)

load("@dagger//:workspace_defs.bzl", "DAGGER_ARTIFACTS", "DAGGER_REPOSITORIES")

maven_install(
    artifacts = DAGGER_ARTIFACTS,
    repositories = DAGGER_REPOSITORIES,
)

# After adding a new dependency, run
#      bazel run @unpinned_maven-deps//:pin
# See more details here -https://github.com/bazelbuild/rules_jvm_external
# Alphabetize
maven_install(
    name = "maven-deps",
    artifacts = [
        "com.fasterxml.jackson.core:jackson-databind:2.13.0",
        "com.google.code.gson:gson:2.8.9",
        "com.google.guava:guava:31.0.1-jre",
        "com.google.protobuf:protobuf-java-util:3.9.2",
        "commons-cli:commons-cli:1.5.0",
        "io.r2dbc:r2dbc-spi:0.9.0.RELEASE",
        "jakarta.xml.bind:jakarta.xml.bind-api:3.0.1",
        "javax.xml.bind:jaxb-api:2.3.1",
        "junit:junit:4.13.2",
        "net.bytebuddy:byte-buddy-agent:1.12.6",
        "net.bytebuddy:byte-buddy:1.12.6",
        "org.apache.logging.log4j:log4j-api:2.17.1",
        "org.apache.logging.log4j:log4j-core:2.17.1",
        "org.flywaydb:flyway-commandline:8.4.4",
        "org.flywaydb:flyway-core:8.4.4",
        "org.jooq:jooq-codegen:3.16.2",
        "org.jooq:jooq-meta:3.16.2",
        "org.jooq:jooq:3.16.2",
        "org.mockito:mockito-core:4.2.0",
        "org.mockito:mockito-inline:4.2.0",
        "org.projectlombok:lombok:1.18.20",
        "org.reactivestreams:reactive-streams:1.0.3",
        "org.xerial:sqlite-jdbc:3.34.0",
    ],
    fetch_sources = True,
    maven_install_json = "@//:maven-deps_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)

load("@maven-deps//:defs.bzl", "pinned_maven_install")

pinned_maven_install()
