genrule(
    name = "jooq_codegen",
    outs = ["idempotency_schema.db"],
    srcs = [
        "//resources/db/sql:flyway-migrations",
        "flyway.conf",
        "@maven-flyway-core",
        "@maven-flyway-commandline",
        "@maven-sqlite-jdbc",
        "@maven-gson",
    ],
    cmd = """mkdir sql && cp resources/db/sql/* sql && \
$(ABSOLUTE_JAVABASE)/bin/java -cp \
$(location @maven-flyway-core):\
$(location @maven-gson):\
$(location @maven-flyway-commandline):\
$(location @maven-sqlite-jdbc) \
org.flywaydb.commandline.Main \
-configFiles=$(location flyway.conf) \
-url=jdbc:sqlite:$@ \
-locations=filesystem:sql \
-jarDirs=sql \
migrate""",
    message = "Creating DB schema based on migrations",
)
