load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "core",
    srcs = [":sources"],
    deps = [
        "//:dagger",
        "//:guava",
        "//:lombok",
        "@com_google_protobuf//:protobuf_java",
        "@log4j-api",
        "//src/main/java/com/bablooka/idempotency/proto:idempotency_record_java_proto"
    ],
    visibility = ["//visibility:public"],
)

filegroup(
   name = "sources",
   srcs = glob(["*.java"]),
   visibility = ["//:__subpackages__"],
)
