load("@rules_java//java:defs.bzl", "java_library")

# No-op change
java_library(
    name = "core",
    srcs = [":sources"],
    visibility = ["//visibility:public"],
    deps = [
        "//:dagger",
        "//:lombok",
        "//src/main/java/com/bablooka/idempotency/proto:idempotency_record_java_proto",
        "//src/main/java/com/bablooka/idempotency/proto:idempotency_record_proto",
        "@com_google_protobuf//:protobuf_java",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf_protobuf_java",
        "@maven-deps//:com_google_guava_guava",
        "@maven-deps//:com_google_protobuf_protobuf_java_util",
        "@maven-deps//:org_apache_logging_log4j_log4j_api",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]),
    visibility = ["//:__subpackages__"],
)
