load("@rules_java//java:defs.bzl", "java_test")

java_test(
    name = "core",
    size = "small",
    srcs = glob(["*.java"]),
    test_class = "com.bablooka.idempotency.core.CoreTestSuite",
    deps = [
        "//:dagger",
        "//src/main/java/com/bablooka/idempotency/core",
        "@maven-deps//:junit_junit",
        "@maven-deps//:net_bytebuddy_byte_buddy",
        "@maven-deps//:net_bytebuddy_byte_buddy_agent",
        "@maven-deps//:org_mockito_mockito_core",
        "@maven-deps//:org_mockito_mockito_inline",
    ],
)
