load("@rules_java//java:defs.bzl", "java_test")

# Empty change
java_test(
    name = "core",
    size = "small",
    srcs = glob(["*.java"]),
    test_class = "com.bablooka.idempotency.core.CoreTestSuite",
    deps = [
        "//:dagger",
        "//:lombok",
        "//src/main/java/com/bablooka/idempotency/core",
        "//src/main/java/com/bablooka/idempotency/proto:idempotency_record_java_proto",
        "//src/main/java/com/bablooka/idempotency/proto:idempotency_record_proto",
        "@com_github_protocolbuffers_protobuf//:timestamp_proto",
        "@com_google_protobuf_protobuf_java",
        "@maven-deps//:com_fasterxml_jackson_core_jackson_databind",
        "@maven-deps//:com_google_protobuf_protobuf_java_util",
        "@maven-deps//:junit_junit",
        "@maven-deps//:net_bytebuddy_byte_buddy",
        "@maven-deps//:net_bytebuddy_byte_buddy_agent",
        "@maven-deps//:org_mockito_mockito_core",
        "@maven-deps//:org_mockito_mockito_inline",
    ],
)
