load("@rules_java//java:defs.bzl", "java_test")

# Empty change
java_test(
    name = "core",
    size = "small",
    srcs = glob(["*.java"]),
    data = [
        "//resources:log4j.properties",
    ],
    jvm_flags = [
        "-Dlog4j.configurationFile=resources/log4j.properties",
        "-Dorg.jooq.no-logo=true",  # Suppress Jooq's annoying self promo
        "-Dorg.jooq.no-tips=true",  # Suppress Jooq's annoying tip of the day
    ],
    test_class = "com.bablooka.idempotency.core.CoreTestSuite",
    runtime_deps = [
        "@maven-deps//:org_apache_logging_log4j_log4j_core",
    ],
    deps = [
        "//:dagger",
        "//:lombok",
        "//src/main/java/com/bablooka/idempotency/core",
        "//src/main/java/com/bablooka/idempotency/proto:idempotency_record_java_proto",
        "//src/main/java/com/bablooka/idempotency/proto:idempotency_record_proto",
        "@com_github_protocolbuffers_protobuf//:timestamp_proto",
        "@com_google_protobuf_protobuf_java",
        "@maven-deps//:com_fasterxml_jackson_core_jackson_databind",
        "@maven-deps//:com_google_protobuf_protobuf_java_util",
        "@maven-deps//:junit_junit",
        "@maven-deps//:net_bytebuddy_byte_buddy",
        "@maven-deps//:net_bytebuddy_byte_buddy_agent",
        "@maven-deps//:org_jooq_jooq",
        "@maven-deps//:org_mockito_mockito_core",
        "@maven-deps//:org_mockito_mockito_inline",
    ],
)
